--- a/oneM2MTester/TestView.html
+++ b/oneM2MTester/TestView.html
@@ -95,6 +95,14 @@
             width: 635px;
         }
 
+        .resourceName {
+            margin-bottom: 10px;
+            margin-top: 10px;
+            width:auto;
+            height: auto;
+            background: #ffaaff;
+        }
+
         .innertube {
             margin: 15px; /* Provides padding for the content */
         }
@@ -125,10 +133,12 @@
         }
 
     </style>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <!-- jQuery Framework 참조하기 -->
+    <script type="text/javascript" src="js/jquery-1.12.4.js"></script>
 
     <script type="text/javascript">
         $(function () {
+
 
             $('#addHeader').click(function () {
 
@@ -141,13 +151,29 @@
                 $('#headerList').append(html);
             });
 
+            /*
             $(document).on("click", '#delHeader', function () {
                 $(this).('delHeader').remove();
             });
-            /*
-             var index = $("#list_detail .contents_row [name=del_btn]").index(object);
-             $("#list_detail .contents_row").eq(index).remove();
-             */
+
+
+            $('#resourceName1').click(function() {
+                $.ajax({
+                    url: "ResourceFormat/xml/ae.txt",
+                    type: "get",
+                    dataType: "text",
+                    cache: false,
+                    timeout: 30000,
+                    success: function(data) {
+
+                       alert(data);
+                    },
+                    error: function(xhr, textStatus, errorThrown) {
+                        alert("123" + textStatus + ': ' + xhr);
+                    }
+                });
+            });*/
+
         });
     </script>
 
@@ -219,13 +245,15 @@
 <nav id="nav">
     <div class="innertube">
         <h1>Heading</h1>
-        <ul>
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-            <li><a href="#">Link 4</a></li>
-            <li><a href="#">Link 5</a></li>
-        </ul>
+        <div id="resourceName1">
+            AE 리소스 생성
+        </div>
+        <div id="resourceName2">
+            AE 리소스 생성
+        </div>
+        <div id="resourceName3">
+            AE 리소스 생성
+        </div>
     </div>
 </nav>
 </body>
